Bad Smells found:

+Temporary field



-fixed code through "Inspect Code"