@@ -1,0 +1,10 @@
+package org.se.lab;
+
+public class CD extends Article{
+
+    public CD(int id, String string, double price) {
+        super(id, string, price);
+    }
+
+
+}
