@@ -1,0 +1,8 @@
+package org.se.lab;
+
+public class DVD extends Article {
+
+    public DVD(int id, String string, double price) {
+        super(id, string, price);
+    }
+}
